Save Post 游戏开发技术 by Qexo

--- a/posts/游戏开发技术.md
+++ b/posts/游戏开发技术.md
@@ -8,7 +8,7 @@ updated: '2024-09-13T15:13:50.561+08:00'
 ---
 [游戏编程模式](https://gpp.tkchu.me/)
 
-# ECS框架
+## ECS框架
 
 ECS(Entity Component System)：实体、组件、系统
 
@@ -16,17 +16,17 @@ ECS(Entity Component System)：实体、组件、系统
 * Component组件：挂载到实体上的组件，负责实体某部分的属性，纯数据结构
 * System系统：纯函数不包含数据，针对具有某些特定属性【组件】的实体，并对属性【组件】进行处理
 
-# 同步方式
+## 同步方式
 
-## 帧同步
+### 帧同步
 
 战斗逻辑在客户端，服务端只转发操作。
 
-## 状态同步
+### 状态同步
 
 战斗逻辑在服务端，属性改变时要同步给客户端改变的值，客户端只展示数据。MMO战斗逻辑必须在服务端。
 
-### 预测
+#### 预测
 
 **【客户端】**
 
@@ -39,7 +39,7 @@ ECS(Entity Component System)：实体、组件、系统
 * 回滚与重演：当对抗延迟与网络抖动时，存在某些用户的cmd延时较大。此时将通过回滚、重演与校正的方式维护一致性。服务端接收到玩家的cmd后会回滚游戏状态到输入该命令对应的时间点，随后在这个事件点开始重演所有输入命令，并计算游戏状态。最后将正确的而状态发送给所有客户端进行同步与校正。
 * 延迟补偿：在因延迟导致的射击误判或动作不同步的问题，服务端在计算命中判定时会根据延迟对玩家的输入时间进行校正
 
-## 对比
+### 对比
 
 流量：状态同步消耗流量大
 
